versioned_docs/version-7.4.0/api/buffer.mdx
---
title: buffer
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

export function Map0() {
  "use strict";
  // No blank lines so MDX parses code block as a single "export" node.
  // jsdoc example start
  var point = turf.point([-90.54863, 14.616599]);
  var buffered = turf.buffer(point, 500, { units: "miles" });
  //addToMap
  var addToMap = { point, buffered };
  // jsdoc example end
  return <ExampleMap addToMap={addToMap} />;
}

### Description

Calculates a buffer for input features for a given radius.

When using a negative radius, the resulting geometry may be invalid if
it's too small compared to the radius magnitude. If the input is a
FeatureCollection, only valid members will be returned in the output
FeatureCollection - i.e., the output collection may have fewer members than
the input, or even be empty.

### Parameters

| Name                  | Type                                                                                                                                                                                                                     | Description                                                                                        |
| --------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------- |
| geojson               | **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3) &#124; [Geometry](https://tools.ietf.org/html/rfc7946#section-3.1) &#124; [Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;any&gt;** | input to be buffered                                                                               |
| radius                | **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Number)**                                                                                                                          | distance to draw the buffer (negative values are allowed)                                          |
| options<i>?</i>       | **[Object](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object)**                                                                                                                          | Optional parameters _(default &#123;&#125;)_                                                       |
| options.units<i>?</i> | **[Units](docs/api/types/Units.mdx)**                                                                                                                                                                                    | Supports all valid Turf [Units](https://turfjs.org/docs/api/types/Units). _(default "kilometers")_ |
| options.steps<i>?</i> | **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Number)**                                                                                                                          | number of steps _(default 8)_                                                                      |

### Returns

**[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3) &#124; [Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6) &#124; [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7)&gt; &#124; undefined** buffered features

### Examples

```javascript
var point = turf.point([-90.54863, 14.616599]);
var buffered = turf.buffer(point, 500, { units: "miles" });
```

<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/buffer

import { buffer } from "@turf/buffer";
const result = buffer(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.buffer(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
